# apptrix_test

./: .env.temp  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
project/config/: settings.py  urls.py
project/main_app/: filters.py  models.py  serializers.py  urls.py  views.py
project/main_app/migrations/: 0001_initial.py  0002_user_matches.py
